test/langtools/tools/javac/lambda/methodReference/MethodReferenceInConstructorInvocation.out
MethodReferenceInConstructorInvocation.java:20:18: compiler.err.super.mref.cant.occur.static.context
1 error
